After lot of Revisi

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-    <nav class="uk-navbar uk-navbar-container uk-position-top uk-position-absolute" uk-navbar>
-        <a href="" class="uk-navbar-item uk-logo">
+    <nav class="uk-navbar uk-navbar-container" uk-navbar>
+        <a href="./index.html" class="uk-navbar-item uk-logo">
             <img src="./img/Pride logos/Pride logo/Copy of Pride_Logo_linear-white.png" width="100" alt="IWC" loading="lazy">
         </a>
 
@@ -23,25 +23,33 @@
                     <a href="./blog.html">BLOG</a>
                     <div class="uk-navbar-dropdown">
                         <ul class="uk-nav uk-navbar-dropdown-nav">
-                            <li><a href="#">Case Studies</a></li>
-                            <li><a href="#">Videos</a></li>
-                            <li><a href="#">Interviews</a></li>
+                            <li><a href="./case-studies.html">Case Studies</a></li>
+                            <li><a href="./videos.html">Videos</a></li>
+                            <li><a href="./interviews.html">Interviews</a></li>
                         </ul>
                     </div>
                 </li>
                 
                 <li>
-                    <a href="#">COURSES</a>
+                    <a href="./course.html">COURSES</a>
                     <div class="uk-navbar-dropdown">
                         <ul class="uk-nav uk-navbar-dropdown-nav">
-                            <li><a href="#">Intelligent Investors Immersive Early Retirement Masterclass</a></li>
-                            <li><a href="#">SaaS Hypergrowth Investing</a></li>
-                            <li><a href="#">China Stocks and Options Course</a></li>
-                            <li><a href="#">8-Figure Trading Blueprint</a></li>
-                            <li><a href="#">Cryptocurrency</a></li>
-                            <li><a href="#">Property Investing Masterclass</a></li>
-                            <li><a href="#">Barbell Investing Course</a></li>
-                            <li><a href="#">All Courses</a></li>
+                            <li><a href="#">E - Course 1</a></li>
+                            <li><a href="#">E - Course 2</a></li>
+                            <li><a href="#">E - Course 3</a></li>
+                            <li><a href="#">E - Course 4</a></li>
+                        </ul>
+                    </div>
+                </li>
+
+                <li>
+                    <a href="./webinar.html">Flagship Programmes & Webinars</a>
+                    <div class="uk-navbar-dropdown">
+                        <ul class="uk-nav uk-navbar-dropdown-nav">
+                            <li><a href="#">Webinar 1</a></li>
+                            <li><a href="#">Webinar 2</a></li>
+                            <li><a href="#">Webinar 3</a></li>
+                            <li><a href="#">Webinar 4</a></li>
                         </ul>
                     </div>
                 </li>
@@ -78,14 +86,18 @@
                         <li class="uk-parent">
                             <a href="#">Courses</a>
                             <ul class="uk-nav-sub">
-                                <li><a href="#">Intelligent Investors Immersive Early Retirement Masterclass</a></li>
-                                <li><a href="#">SaaS Hypergrowth Investing</a></li>
-                                <li><a href="#">China Stocks and Options Course</a></li>
-                                <li><a href="#">8-Figure Trading Blueprint</a></li>
-                                <li><a href="#">Cryptocurrency</a></li>
-                                <li><a href="#">Property Investing Masterclass</a></li>
-                                <li><a href="#">Barbell Investing Course</a></li>
-                                <li><a href="#">All Courses</a></li>
+                                <li><a href="#">E - Course 1</a></li>
+                                <li><a href="#">E - Course 2</a></li>
+                                <li><a href="#">E - Course 3</a></li>
+                                <li><a href="#">E - Course 4</a></li>
+                            </ul>
+                        </li>
+                        <li class="uk-parent">
+                            <a href="">Flagship Programmes & Webinars</a>
+                            <ul>
+                                <li><a href="">Webinar 1</a></li>
+                                <li><a href="">Webinar 2</a></li>
+                                <li><a href="">Webinar 3</a></li>
                             </ul>
                         </li>
                         <li class="uk-parent">
