--- a/read-blog.html
+++ b/read-blog.html
@@ -19,28 +19,36 @@
 
             <ul class="uk-navbar-nav uk-visible@m">
                 <li>
-                    <a href="#">BLOG</a>
+                    <a href="./blog.html">BLOG</a>
                     <div class="uk-navbar-dropdown">
                         <ul class="uk-nav uk-navbar-dropdown-nav">
-                            <li><a href="#">Case Studies</a></li>
-                            <li><a href="#">Videos</a></li>
-                            <li><a href="#">Interviews</a></li>
+                            <li><a href="./case-studies.html">Case Studies</a></li>
+                            <li><a href="./videos.html">Videos</a></li>
+                            <li><a href="./interviews.html">Interviews</a></li>
                         </ul>
                     </div>
                 </li>
                 
                 <li>
-                    <a href="#">COURSES</a>
+                    <a href="./course.html">COURSES</a>
                     <div class="uk-navbar-dropdown">
                         <ul class="uk-nav uk-navbar-dropdown-nav">
-                            <li><a href="#">Intelligent Investors Immersive Early Retirement Masterclass</a></li>
-                            <li><a href="#">SaaS Hypergrowth Investing</a></li>
-                            <li><a href="#">China Stocks and Options Course</a></li>
-                            <li><a href="#">8-Figure Trading Blueprint</a></li>
-                            <li><a href="#">Cryptocurrency</a></li>
-                            <li><a href="#">Property Investing Masterclass</a></li>
-                            <li><a href="#">Barbell Investing Course</a></li>
-                            <li><a href="#">All Courses</a></li>
+                            <li><a href="#">E - Course 1</a></li>
+                            <li><a href="#">E - Course 2</a></li>
+                            <li><a href="#">E - Course 3</a></li>
+                            <li><a href="#">E - Course 4</a></li>
+                        </ul>
+                    </div>
+                </li>
+
+                <li>
+                    <a href="./webinar.html">Flagship Programmes & Webinars</a>
+                    <div class="uk-navbar-dropdown">
+                        <ul class="uk-nav uk-navbar-dropdown-nav">
+                            <li><a href="#">Webinar 1</a></li>
+                            <li><a href="#">Webinar 2</a></li>
+                            <li><a href="#">Webinar 3</a></li>
+                            <li><a href="#">Webinar 4</a></li>
                         </ul>
                     </div>
                 </li>
@@ -57,20 +65,63 @@
                 </li>
             </ul>
 
-            <a href="" class="uk-hidden@m">
-                <i uk-icon="icon: menu"></i>
+            <a href="#offcanvas-usage" class="uk-hidden@m navbar-mobile" uk-toggle>
+                <i uk-icon="icon: menu; ratio: 1.5"></i>
             </a>
+
+            <div id="offcanvas-usage" uk-offcanvas="overlay: true; flip: true">
+                <div class="uk-offcanvas-bar uk-flex uk-flex-column">
+                    <img class="uk-padding" src="./img/Pride logos/Pride logo/Copy of Pride_Logo_transparent-white.png" alt="">
+                    <ul class="uk-nav-default uk-nav-parent-icon" uk-nav>
+                        <li class="uk-nav-header">Main Menu</li>
+                        <li class="uk-parent">
+                            <a href="#">Blog</a>
+                            <ul class="uk-nav-sub">
+                                <li><a href="#">Case Studies</a></li>
+                                <li><a href="#">Videos</a></li>
+                                <li><a href="#">Interviews</a></li>
+                            </ul>
+                        </li>
+                        <li class="uk-parent">
+                            <a href="#">Courses</a>
+                            <ul class="uk-nav-sub">
+                                <li><a href="#">E - Course 1</a></li>
+                                <li><a href="#">E - Course 2</a></li>
+                                <li><a href="#">E - Course 3</a></li>
+                                <li><a href="#">E - Course 4</a></li>
+                            </ul>
+                        </li>
+                        <li class="uk-parent">
+                            <a href="">Flagship Programmes & Webinars</a>
+                            <ul>
+                                <li><a href="">Webinar 1</a></li>
+                                <li><a href="">Webinar 2</a></li>
+                                <li><a href="">Webinar 3</a></li>
+                            </ul>
+                        </li>
+                        <li class="uk-parent">
+                            <a href="#">About</a>
+                            <ul class="uk-nav-sub">
+                                <li><a href="#">About Us</a></li>
+                                <li><a href="#">Ask IWC Facebook</a></li>
+                                <li><a href="#">Interviews</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
         </div>
     </nav>
 
     <div class="custom-article-header-container uk-margin-bottom">
         <div class="uk-padding-large uk-flex uk-flex-center uk-flex-middle uk-background-cover article" data-src="./img/bg-new.jpg" uk-img>
             <article class="uk-article uk-text-center">
-                <p class="uk-article-meta">January 21, 2021</p>
-                <p class="uk-article-title">
+                <p class="uk-article-meta nunito-font">January 21, 2021</p>
+                <p class="uk-article-title nunito-font">
                     Why stocks some stocks fall faster/rise faster than others? Understanding BETA (β)
                 </p>
-                <p class="uk-article-meta">Investments</p>#
+                <p class="uk-article-meta nunito-font">Investments</p>#
                 <br>
             </article>
         </div>
